Experiments on all eu, train_utils and collect dataset utilities

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -1570,7 +1570,7 @@
     "          optimizer,\n",
     "          criterion,\n",
     "          epochs,\n",
-    "          train_labels,\n",
+    "          train_class_labels,\n",
     "          checkpoint_path,\n",
     "          device):\n",
     "    \n",
@@ -1622,7 +1622,7 @@
     "            metrics.populate_confidence(train_confidences, train_labels, train_predictions, labels, outputs)\n",
     "            \n",
     "        train_loss = running_loss / len(train_data_loader.dataset)\n",
-    "        train_gap, _ = metrics.gap_metric(train_confidences, train_labels, train_predictions, train_labels)\n",
+    "        train_gap, _ = metrics.gap_metric(train_confidences, train_labels, train_predictions, train_class_labels)\n",
     "        \n",
     "        results[\"train_loss\"].append(train_loss)\n",
     "        results[\"train_gap\"].append(train_gap)\n",
@@ -1646,7 +1646,7 @@
     "                \n",
     "                metrics.populate_confidence(val_confidences, val_labels, val_predictions, labels, outputs)\n",
     "        valid_loss = running_loss / len(validation_data_loader.dataset)\n",
-    "        valid_gap, _ = metrics.gap_metric(val_confidences, val_labels, val_predictions, train_labels)\n",
+    "        valid_gap, _ = metrics.gap_metric(val_confidences, val_labels, val_predictions, train_class_labels)\n",
     "        \n",
     "        results[\"val_loss\"].append(valid_loss)\n",
     "        results[\"val_gap\"].append(valid_gap)\n",
@@ -2888,6 +2888,14 @@
     }
    ],
    "execution_count": 186
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "32ab1232bbecb787"
   },
   {
    "metadata": {
@@ -5366,7 +5374,7 @@
    "cell_type": "code",
    "source": [
     "results_256 = train(efficient_net_256, train_dataloader_256, val_dataloader_256, optimizer_256, criterion, epochs=30,\n",
-    "                    train_labels=unique_classes_train, checkpoint_path='models/efficient-net-256', device=device)"
+    "                    train_labels=unique_classes_train, checkpoint_path='models/bg_efficient-net-256', device=device)"
    ],
    "id": "865ca5ec390679ff",
    "outputs": [
@@ -6541,7 +6549,7 @@
    "cell_type": "code",
    "source": [
     "model_512, gap_512, df_with_confidence_512 = train_and_report(train_df, val_df, transform_to_512, len(unique_classes),\n",
-    "                                                              unique_classes_train, \"models/efficient-net-512\",\n",
+    "                                                              unique_classes_train, \"models/bg_efficient-net-512\",\n",
     "                                                              device=device, batch_size=8, epochs=10)"
    ],
    "id": "209c6fea0ae9eb2f",
